# Pyinstaller_test

./: .gitignore  app.py  captur_screen_shot_int_windowsOS.py  config.toml  config_handler.py  google_credentials.py  main.py  main_windowsOS.py  manifest-surfer-400014-aa2bec31738b.json  myAPP.spec  pyproject.toml  save_file_test.py  settings_v5.py  settings_windowsOS.py  sub_app.py  ver0.9.0.py  win32api.spec
